[project]
name = "sa26-api"
version = "0.1.0"
description = "API"
authors = [
    {name = "crystalbaek", email = "bfilkl730@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
